# project-keel

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: README.md  settings.json
.github/workflows/: ci.yml  pages.yml  scheduled.yml
agents/: AGENT.md  README.md
agents/index_enforcer/: AGENT.md  README.md  __init__.py  _brain.py  prompt.md  tools.md
agents/tools/: AGENT.md  README.md  accountability_report.tool.md  build_corpus.tool.md  link_corpus.tool.md  query_corpus.tool.md  (+1 more)
api/: AGENT.md  README.md
config/: AGENT.md  README.md  default.example.toml  project.json  rag.example.toml
containers/: AGENT.md  README.md
demo/: AGENT.md  README.md  run_demo.py
docs/: AGENT.md  README.md
evals/: AGENT.md  README.md  README_run.md
mcp/: AGENT.md  README.md  action_server.py  protocol.py  qa_server.py
models/: AGENT.md  README.md  __init__.py  claude_code_headless.py  contracts.py  fake.py  openai_compatible.py  registry.py
ops/: AGENT.md  README.md
runtimes/: AGENT.md  README.md  __init__.py  _checkpoint.py  _inprocess.py  contracts.py  langgraph_adapter.py  registry.py
scripts/: AGENT.md  README.md  README_check_structure.md  README_scaffold.md  accountability_report.py  cdmon_sync.py  check_generic.py  check_scaffold_sync.py  check_structure.py  query_corpus.py  scaffold.py
src/: AGENT.md  README.md
test-docs/: AGENT.md  README.md  strategy.md
tests/: AGENT.md  README.md
wiki/: AGENT.md  README.md
(+151 files in other folders)
